--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,30 @@
+astroid==2.15.3
+attrs==23.1.0
+black==23.3.0
+click==8.1.3
+contourpy==1.0.7
+cycler==0.11.0
+dill==0.3.6
+fonttools==4.39.3
+iniconfig==2.0.0
+isort==5.12.0
+kiwisolver==1.4.4
+lazy-object-proxy==1.9.0
+matplotlib==3.7.1
+mccabe==0.7.0
+mypy==1.2.0
+mypy-extensions==1.0.0
 numpy==1.24.2
+packaging==23.1
+pathspec==0.11.1
+Pillow==9.5.0
+platformdirs==3.2.0
+pluggy==1.0.0
+pylint==2.17.2
+pyparsing==3.0.9
 pytest==7.2.2
+python-dateutil==2.8.2
+six==1.16.0
+tomlkit==0.11.7
+typing_extensions==4.5.0
+wrapt==1.15.0
