--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,9 @@ platformdirs==3.2.0
 pluggy==1.0.0
 pylint==2.17.2
 pyparsing==3.0.9
+PyQt5==5.15.9
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.12.1
 pytest==7.2.2
 python-dateutil==2.8.2
 six==1.16.0
